[package]
name = "pkmn-card-bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15"
poise = "0.5"
reqwest = { version = "0.11", features = ["blocking"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
futures = "0.3"
serde_json = "1.0"
serde = "1.0"
chrono = "0.4.25"
diesel = { version = "2.1.0", features = ["sqlite"] }
diesel_migrations = "2.1.0"
libsqlite3-sys = { version = "0.26.0", features = ["bundled"] }